err/julz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/app'...
Listing './lib/python3.5/site-packages/app/commands'...
Compiling './lib/python3.5/site-packages/app/commands/base.py'...
***   File "./lib/python3.5/site-packages/app/commands/base.py", line 42
    print '\n This method has not been implemented yet.\n'
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/destroy.py'...
***   File "./lib/python3.5/site-packages/app/commands/destroy.py", line 13
    print "\n%s has no valid generator.\n" % curGenerator
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/generate.py'...
***   File "./lib/python3.5/site-packages/app/commands/generate.py", line 13
    print "\n%s has no valid generator.\n" % curGenerator
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/hello.py'...
***   File "./lib/python3.5/site-packages/app/commands/hello.py", line 11
    print 'Hello, world!'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/install.py'...
***   File "./lib/python3.5/site-packages/app/commands/install.py", line 10
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/new.py'...
***   File "./lib/python3.5/site-packages/app/commands/new.py", line 13
    print "There is already a project named \"%s\"." % self.options['<app_path>']
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/scrap.py'...
***   File "./lib/python3.5/site-packages/app/commands/scrap.py", line 10
    print "\n Project '%s' doesn't exist\n" % self.options['<app_path>']
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/commands/update.py'...
***   File "./lib/python3.5/site-packages/app/commands/update.py", line 10
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/app/templates'...
Listing './lib/python3.5/site-packages/app/templates/app'...
Listing './lib/python3.5/site-packages/app/templates/config'...
Listing './lib/python3.5/site-packages/app/templates/test'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/julz-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
